--- a/.github/workflows/llm-editor.yaml
+++ b/.github/workflows/llm-editor.yaml
@@ -36,7 +36,7 @@ jobs:
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
-          pip install beautifulsoup4 requests
+          pip install -r requirements.txt
       
       - name: Run LLM Editor Script
         id: editor
